# lllm

./: .envrc  .gitignore  .tool-versions  README.md  attention.py  config.ini  data_loader.py  evaluate.py  inference.py  main.py  model.py  pyproject.toml  sample_data.txt  testing.ipynb  tokenizer.py  train.py  transformer_block.py  transformer_model.py
Data/: data_loader.py  prepare_data.py  tokenizer.py
Model/: attention.py  evaluate.py  inference.py  positional_encoding.py  train.py  transformer_block.py  transformer_model.py
