[tool.poetry]
name = "lllm"
version = "0.1.0"
description = "Lamphear Large Language Model"
authors = ["Steven Lamphear <slamphear@users.noreply.github.com>"]
license = "MPL 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.1.0"
jupyter = "^1.0.0"
numpy = "^1.26.1"
opendatasets = "^0.1.22"
pandas = "^2.1.2"
configparser = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
